--- a/onigiri.html
+++ b/onigiri.html
@@ -11,7 +11,16 @@
             <br />
             <p style="display: inline;">If you're ordering for the first time, shoot me a <div class="tooltip">message<span class="tooltiptext">415.298<span style="display: none;">1920183</span>.4687</span></div> to make sure I've got your address</p>
             <br />
-            <p><i>PS: tell your friends =)</i></p>
+            <p style="display: inline;">Remember you can barter if you don't want to pay!</p>
+
+            <div class="ingredients">
+                <p style="text-align: center;"><b>Ingredients: </b></p>
+                <p><b>Ume Plums</b> — <i>Mume Farms, Orland CA</i></p>
+                <p><b>Eggs</b> — <i>Corvus Farm, Pescadero CA</i></p>
+                <p><b>Rice</b> — <i>Koda Farms, Dos Palos CA</i></p>
+                <p><b>Bonito</b> — <i>nothin special</i></p>
+                <p><b>Seaweed</b> — <i>nothin special</i></p>
+            </div>
         </div>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScblpCKMtLZeSPLKH3pTWS_lTymldtGz3ggh7_Nb2Ezgx1b1w/viewform?embedded=true" width="750" height="1900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </center>
