--- a/onigiri.html
+++ b/onigiri.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     //favicon stuff
-    <link rel="apple-touch-icon" sizes="180x180" href="/onigiri-apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/onigiri-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/onigiri-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/onigiri-apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/onigiri-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/onigiri-16x16.png">
     <title>Onigiri</title>
 
 
