--- a/onigiri.html
+++ b/onigiri.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     //favicon stuff
     <link rel="apple-touch-icon" sizes="180x180" href="/img/onigiri-apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/onigiri-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/onigiri-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/onigiri-favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/onigiri-favicon-16x16.png">
     <title>Onigiri</title>
 
 
