--- a/onigiri.html
+++ b/onigiri.html
@@ -24,7 +24,7 @@
 <body>
     <center id="top">
         <div style="padding: 4em; padding-bottom: 0; width:750px;">
-            <p style="display: inline"><b>I make <div class="tooltipbig">onigiri<span class="tooltiptext" style="width:350px">🍙 small seaweed-wrapped rice balls with a treat in the middle</span></div></a> twice a week and deliver them to my friends around Santa Cruz :)</b></p>
+            <p style="display: inline"><b>I make <div class="tooltipbig">onigiri<span class="tooltiptext" style="width:350px">🍙 small seaweed-wrapped rice balls with a treat in the middle</span></div></a> on tuesdays and deliver them to my friends around Santa Cruz :)</b></p>
             <br />
             <p style="display: inline;">If you're ordering for the first time, shoot me a <div class="tooltip">message<span class="tooltiptext">415.298<span style="display: none;">1920183</span>.4687</span></div> to make sure I've got your address</p>
             <br />
@@ -39,7 +39,7 @@
                 <p><b>Seaweed</b> — <i>nothin special</i></p>
             </div>
         </div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScblpCKMtLZeSPLKH3pTWS_lTymldtGz3ggh7_Nb2Ezgx1b1w/viewform?embedded=true" width="750" height="1600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScblpCKMtLZeSPLKH3pTWS_lTymldtGz3ggh7_Nb2Ezgx1b1w/viewform?embedded=true" width="750" height="950" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <p style="margin-top: 0;padding-bottom: 20em">you'll probably wanna <b><a href="#top">scroll back up</a></b> after submitting. thanks google.</p>
     </center>
 
