--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 <p>I'm Izzy.</p>
                 <p>I work with botany, data analytics, and community.</p>
                 <ul>
-                        <li><a href="https://github.com/izzymiller">code</a></li>
-                        <li><a href="https://www.linkedin.com/in/izzy-miller/">linkedin</a></li>
-                        <li><a href="mailto:isidoredmiller@gmail.com">contact</a></li>
+                        <li class="home"><a href="blog.html">blog</a></li>
+                        <li class="home"><a href="https://github.com/izzymiller">code</a></li>
+                        <li class="home"><a href="https://www.linkedin.com/in/izzy-miller/">linkedin</a></li>
+                        <li class="home"><a href="mailto:isidoredmiller@gmail.com">contact</a></li>
 
                 </ul>
         </div>
