--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -10,7 +10,7 @@
     </script>
 
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>🔮 August Hex Horoscope 🔮</title>
 </head>
@@ -19,14 +19,11 @@
 
 <body>
     <div id="container">
-        <div id="inner">
         <center>
-            <embed width="1000" height="1000" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
-            <div class="footer"><b><a href="https://izzy.co/blog">blog home</a></b>
+            <embed class="hex" width="1000" height="1000" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
+            <div class="footer"><b><a href="https://izzy.co/blog"><- blog</a></b>
         </center>
             
-</div>
-
 </div>
 
 
