--- a/blog.html
+++ b/blog.html
@@ -19,9 +19,12 @@
 
 <body>
         <div id="container">
+                <div style="position: fixed; top: 30px; left: 50%; transform: translate(-50%, -50%);">
+                <h1>blorg</h1>
+                        </div>
                 <div id="inner">
                 <ul>
-                        <li class="blog"><a href="blogs/horoscope-aug.html">🔮 August Hex Horoscope 🔮</a></li>
+                        <li class="blog"><i>8-11-21</i> | <a href="blogs/horoscope-aug.html"><b>🔮 August Hex Horoscope 🔮</b></a></li>
                 </ul>
 
         </div>
