--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -23,7 +23,7 @@
             <embed class="hex" width="1000" height="1000" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
             <br />
             <br />
-            <div class="footer"><b><a href="https://izzy.co/blog"><- blog</a></b>
+            <div class="footer" style="margin-bottom: 1em;"><b><a href="https://izzy.co/blog"><- blog</a></b>
         </center>
             
 </div>
