--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -19,6 +19,11 @@
 
 <body>
     <div id="container">
+        <div style="padding-top: 1em;" >
+            <h2>🔮 August Hex Horoscope 🔮</h1>
+            <h4><i>8-11-21</i></h2>
+            <a href="https://app.hex.tech/hex/hex/4a84b264-8ce0-43e5-8920-0cc946e46e04/draft/logic"><b>View Logic on Hex</b></a>
+        </div>
         <center>
             <embed class="hex" width="1000" height="1000" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
             <br />
