--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 </ul>
         </div>
-<div class="footer">currently: </b><font color=5A2FC2><a href="https://looker.com">looker</a></font></center>
+<div class="footer">currently: </b><font color=f5c0c0><a href="https://hex.tech">⬡ hex</a></font></center>
 </div>
 
 </div>
