--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -12,19 +12,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:site_name" content="izzy.co" />
-    <meta property=“og:title” content="Izzy Miller" />
-    <meta property="og:description" content="Welcome to the inaugural Hex Horoscope, a new monthly series in which I attempt to divine the general trend of the month to come using Hex…" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@izzymiller" />
+    <meta name="twitter:creator" content="@izzymiller" />
     <meta property="og:url" content="https://www.izzy.co/blogs/horoscope-aug.html" />
-    <meta property="og:type" content="article" />
-    <meta property="article:publisher" content="https://www.izzy.co" />
-    <meta property="og:image" content="" />
-    <meta property="og:image:secure_url" content="https://i.imgur.com/txXPeJE.jpg" />
-    <meta property="og:image:width" content="640" />
-    <meta property="og:image:height" content="376" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:image" content="https://i.imgur.com/txXPeJE.jpg" />
-    <meta property="twitter:site" content="@isidoremiller" />
+    <meta property="og:title" content="🔮 August Hex Horoscope 🔮" />
+    <meta property="og:description" content="Welcome to the inaugural Hex Horoscope, a new monthly series in which I attempt to divine the general trend of the month to come using Hex." />
+    <meta property="og:image" content="https://i.imgur.com/txXPeJE.jpg" />
     <title>🔮 August Hex Horoscope 🔮</title>
 </head>
 
