--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -11,7 +11,7 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@izzymiller" />
     <meta name="twitter:creator" content="@izzymiller" />
@@ -19,20 +19,21 @@
     <meta property="og:title" content="🔮 August Hex Horoscope 🔮" />
     <meta property="og:description" content="Welcome to the inaugural Hex Horoscope, a new monthly series in which I attempt to divine the general trend of the month to come using Hex." />
     <meta property="og:image" content="https://i.imgur.com/txXPeJE.jpg" />
+
     <title>🔮 August Hex Horoscope 🔮</title>
 </head>
 
 
 
 <body>
-    <div id="container">
+    <div id="container" style="display: block;">
         <div style="padding-top: 1em;" >
             <h2>🔮 August Hex Horoscope 🔮</h1>
             <h4><i>8-11-21</i></h2>
             <a href="https://app.hex.tech/hex/hex/4a84b264-8ce0-43e5-8920-0cc946e46e04/draft/logic"><b>View Logic on Hex</b></a>
         </div>
         <center>
-            <embed class="hex" width="1000" height="1000" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
+            <embed class="hex" width="90%" height="100%" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
             <br />
             <br />
             <div class="footer" style="margin-bottom: 1em;"><b><a href="https://izzy.co/blog"><- blog</a></b>
