--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -33,7 +33,7 @@
             <a href="https://app.hex.tech/hex/hex/4a84b264-8ce0-43e5-8920-0cc946e46e04/draft/logic"><b>View Logic on Hex</b></a>
         </div>
         <center>
-            <embed class="hex" width="90%" height="100%" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
+            <embed class="hex" width="90%" height="1000px" frameborder="0" src="https://app.hex.tech/hex/app/4a84b264-8ce0-43e5-8920-0cc946e46e04/latest?embedded=true" />
             <br />
             <br />
             <div class="footer" style="margin-bottom: 1em;"><b><a href="https://izzy.co/blog"><- blog</a></b>
