--- a/blog.html
+++ b/blog.html
@@ -22,9 +22,11 @@
                 <div style="position: fixed; top: 30px; left: 50%; transform: translate(-50%, -50%);">
                 <h1>blorg</h1>
                         </div>
-                <div id="inner">
+                <div id="inner" style="text-align: start;">
                 <ul>
-                        <li class="blog"><i>8-11-21</i> | <a href="blogs/horoscope-aug.html"><b>🔮 August Hex Horoscope 🔮</b></a></li>
+                        <li class="blog"><i>08.31.21</i> | <a href="https://towardsdatascience.com/data-applications-for-analytics-817d4761211c"><b>📊 Data Applications</b> [external]</a></li>
+                        <li class="blog"><i>08.11.21</i> | <a href="blogs/horoscope-aug.html"><b>🔮 August Hex Horoscope</b></a></li>
+                        <li class="blog"><i>02.19.19</i> | <a href="https://medium.com/@isidoredmiller/four-things-tropical-trees-taught-me-about-troubleshooting-sql-d75c75676128"><b>🌳 Four Things Tropical Trees Taught Me About Troubleshooting SQL</b> [external]</a></li>
                 </ul>
 
         </div>
