--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src='img/lorax.png' width=10% height=auto id='profile_pic' />
                 <p>I'm Izzy.</p>
                 <p>I work with botany, data analytics, and community.</p>
-                <ul>
+                <ul class="pages">
                         <li class="home"><a href="blog.html">blog</a></li>
                         <li class="home"><a href="https://github.com/izzymiller">code</a></li>
                         <li class="home"><a href="https://www.linkedin.com/in/izzy-miller/">linkedin</a></li>
