--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
                         </div>
                 <div id="inner" style="text-align: start;">
                 <ul>
+                        <li class="blog"><i>09.16.21</i> | <a href="blogs/horoscope-sep.html"><b>🔮 September Hex Horoscope</b></a></li>
                         <li class="blog"><i>08.31.21</i> | <a href="https://towardsdatascience.com/data-applications-for-analytics-817d4761211c"><b>📊 Data Applications</b> [external]</a></li>
                         <li class="blog"><i>08.11.21</i> | <a href="blogs/horoscope-aug.html"><b>🔮 August Hex Horoscope</b></a></li>
                         <li class="blog"><i>02.19.19</i> | <a href="https://medium.com/@isidoredmiller/four-things-tropical-trees-taught-me-about-troubleshooting-sql-d75c75676128"><b>🌳 Four Things Tropical Trees Taught Me About Troubleshooting SQL</b> [external]</a></li>
