--- a/blogs/horoscope-sep.html
+++ b/blogs/horoscope-sep.html
@@ -30,13 +30,13 @@
         <div style="padding-top: 1em;" >
             <h2>🔮 September Hex Horoscope 🔮</h1>
             <h4><i>9-16-21</i></h2>
-            <a href="https://app.hex.tech/hex-public/app/3280f43d-ebde-41a0-8399-1377878d551d/draft/logic"><b>View Logic on Hex</b></a>
+            <div class="footer" style="margin-bottom: 1em;"><b><a href="https://izzy.co/blog"><- blog</a></b>
+            <!-- <a href="https://app.hex.tech/hex-public/app/3280f43d-ebde-41a0-8399-1377878d551d/draft/logic"><b>View Logic on Hex</b></a> -->
         </div>
         <center>
             <embed class="hex" width="90%" height="1000px" frameborder="0" src="https://app.hex.tech/hex-public/app/3280f43d-ebde-41a0-8399-1377878d551d/latest?embedded=true" />
             <br />
             <br />
-            <div class="footer" style="margin-bottom: 1em;"><b><a href="https://izzy.co/blog"><- blog</a></b>
         </center>
             
 </div>
