--- a/blogs/horoscope-aug.html
+++ b/blogs/horoscope-aug.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156828014-2"></script>
