--- a/blogs/halfway-there.html
+++ b/blogs/halfway-there.html
@@ -27,16 +27,14 @@
 
 
 <body>
-    <div id="container" style="display: block;">
-        <div style="padding-top: 1em;" >
+    <div id="container" style="display: flex;height:100%;width:100%">
+        <div style="padding-top: 1em;flex-grow:1;height:100%" >
             <h2>Halfway There</h1>
             <h4><i>07-20-22</i></h2>
             <div class="footer" style="margin-bottom: 1em;"><b><a href="https://izzy.co/blog"><- blog</a></b>
-        </div>
-        <center>
-            <embed class="hex" width="90%" height="1000px" frameborder="0" src="https://app.hex.tech/hex-public/app/546f2a43-6713-4f91-8543-7015556c74d5/latest?embedded=true" />
-            <br />
-            <br />
+            </div>
+        <center style="flex-grow: 1;height:100%;">
+            <embed class="hex" width="90%" height="100%" frameborder="0" src="https://app.hex.tech/hex-public/app/546f2a43-6713-4f91-8543-7015556c74d5/latest?embedded=true" />
         </center>
             
 </div>
