--- a/blogs/robo-boys.html
+++ b/blogs/robo-boys.html
@@ -119,7 +119,7 @@
             than I could have possibly imagined:
           </p>
 
-          <video loop onloadstart="this.playbackRate = 1.25;" autoplay class="iphone-vid" height="600px">
+          <video controls muted loop onloadstart="this.playbackRate = 1.25;" autoplay class="iphone-vid" height="600px">
             <source src="https://i.imgur.com/H7tDprR.mp4" type="video/mp4">
           </video>
           <br />
@@ -482,7 +482,7 @@ def wake():
 <h2 class="blog-heading" id="conclusion">And that's it!</h2>
 <p>I deployed this (with Firebase hosting, again, free, why not) and saved it as a PWA on my phone. I showed my friends how to do that, and now we all have access to the same “Group Chat” with the AI bots.</p>
 
-<video loop onloadstart="this.playbackRate = 1.5;" autoplay class="iphone-vid" height="600px">
+<video controls muted loop onloadstart="this.playbackRate = 1.5;" autoplay class="iphone-vid" height="600px">
   <source src="https://i.imgur.com/7RjFDrc.mp4" type="video/mp4">
 </video>
 
@@ -494,7 +494,7 @@ def wake():
 
 <p>It really, really nailed the voice and perspectives of my friends, and actually retains a ton of information on their preferences, lives, etc. I had considered attaching an embedding database (like <a href="https://www.trychroma.com/">Chroma</a>) to actually give the boys a knowledge store, but found this to be unnecessary. They know who we each are dating, what we like to do, and most importantly...</p>
 
-<video onloadstart="this.playbackRate = 1.5;" autoplay class="iphone-vid" height="600px">
+<video controls muted onloadstart="this.playbackRate = 1.5;" autoplay class="iphone-vid" height="600px">
   <source src="https://i.imgur.com/Wzba2sH.mp4" type="video/mp4">
 </video>
 <br />
