--- a/blogs/robo-boys.html
+++ b/blogs/robo-boys.html
@@ -119,7 +119,7 @@
             than I could have possibly imagined:
           </p>
 
-          <video controls muted loop onloadstart="this.playbackRate = 1.25;" autoplay class="iphone-vid" height="600px">
+          <video controls muted loop autoplay class="iphone-vid" height="600px">
             <source src="https://i.imgur.com/H7tDprR.mp4" type="video/mp4">
           </video>
           <br />
