--- a/blogs/robo-boys.html
+++ b/blogs/robo-boys.html
@@ -173,7 +173,8 @@
             images, and possibly links as well. I found that the bots used
             tapbacks a lot, and I had to manually override that behavior.
           </aside>
-          
+
+          <script src="https://gist.github.com/izzymiller/80e9017aa6c5341df983ea05a2b9c978.js"></script>
           <!-- <iframe class="hexembed" width="90%" height="600" frameborder="0" src="https://app.hex.tech/hex-public/app/84f25a08-95c6-4203-ae4e-9952b2ee4c66/18/bba4e329-8253-4b9f-8535-165602c40a3f?embedded=true&embeddedStaticCellId=469055ed-fc2e-44e4-b8c8-dbb3275f3776"> </iframe> -->
           
           <p>
@@ -223,6 +224,7 @@
           </p>
           <p>This is a classic window function pattern in SQL. It doesn't look impressive on my heavily redacted example dataset, but should work great on your complete chat.db.</p>
           <br />
+          <script src="https://gist.github.com/izzymiller/b894c6a3fd6146ff7b8d87e792bc2a94.js"></script>
           <!-- <iframe width="90%" height="600" frameborder="0" src="https://app.hex.tech/hex-public/app/84f25a08-95c6-4203-ae4e-9952b2ee4c66/18/bba4e329-8253-4b9f-8535-165602c40a3f?embedded=true&embeddedStaticCellId=3b0717b1-5be5-4589-8d8e-7e456b145100"> </iframe> -->
 
           <p>
@@ -237,7 +239,7 @@
             dictionary is almost 100x faster than using the pandas built-in
             iteration tools like df.itertuples() or df.iterrows()!
           </aside>
-
+          <script src="https://gist.github.com/izzymiller/ee6cbeec41ed198f86fb8105375ec79b.js"></script>
           <!-- <iframe width="90%" height="600" frameborder="0" src="https://app.hex.tech/hex-public/app/84f25a08-95c6-4203-ae4e-9952b2ee4c66/18/bba4e329-8253-4b9f-8535-165602c40a3f?embedded=true&embeddedStaticCellId=0312da7d-37a2-4e5d-ad90-3595f44ea1e1"></iframe> -->
 
           <p>Here's what one of these samples looks like:</p>
