--- a/blogs/robo-boys.html
+++ b/blogs/robo-boys.html
@@ -74,7 +74,7 @@
         <div class="maintext">
           <p>
             tl;dr: I trained an uncensored large language model on the
-            college-era group chat that me and my best friends still use.
+            college-era group chat that me and my best friends still use, with LlaMa, <a href="https://modal.com">Modal</a>, and <a href="https://hex.tech">Hex</a>.
             <del>The results will shock you.</del>
           </p>
           <br />
