--- a/blogs/robo-boys.html
+++ b/blogs/robo-boys.html
@@ -218,7 +218,7 @@
           <p>
             To start, I sessionized the messages into “conversation” blocks,
             with a 4-hour drop-off threshold. Group chats are often pretty
-            async, and i felt it was better to over-capture sessions than
+            async, and I felt it was better to over-capture sessions than
             under-capture them and get a model with very little understanding of
             complete conversations.
           </p>
