--- a/blogs/robo-boys.html
+++ b/blogs/robo-boys.html
@@ -35,7 +35,7 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
     rel="stylesheet"
   />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=1000">
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@izzymiller" />
   <meta name="twitter:creator" content="@izzymiller" />
