--- a/blogs/a-glitch-in-the-seo-matrix.html
+++ b/blogs/a-glitch-in-the-seo-matrix.html
@@ -295,7 +295,7 @@
             <strong>For Busy Folks</strong>? No notes. I desperately want to
             quit my job and write for High Adviser full time. I think I could
             really uplevel their innovation management, and generate fresh
-            ideas— For Busy Folks!
+            ideas— for Busy Folks!
           </p>
 
           <img width="70%" src="https://i.imgur.com/rJwdzGi.png" />
