--- a/blogs/a-glitch-in-the-seo-matrix.html
+++ b/blogs/a-glitch-in-the-seo-matrix.html
@@ -206,8 +206,8 @@
           </p>
 
           <p>
-            The really interesting thing about this case is that the original
-            source content driving this search interest is
+            The really interesting thing about this case though, is that the
+            original source content driving this search interest is
             <strong>not</strong> publicly available or indexed. This query is
             copied and pasted verbatim from an exam, which are famously not
             something you want to be found on Google.
