--- a/blogs/a-glitch-in-the-seo-matrix.html
+++ b/blogs/a-glitch-in-the-seo-matrix.html
@@ -386,9 +386,8 @@
           <aside>
             PS: secretly, I hope that this post starts ranking for “a
             comprehensive ecosystem of open source software for big data
-            management”, which is why I have said it verbatim so many times and
-            added a helpful callout at the top for students. To be honest, I'd
-            settle for the 19th spot: just above highadviser.com.
+            management”, which is why I have said it verbatim so many times. To
+            be honest, I'd settle for the 19th spot: just above highadviser.com.
           </aside>
 
           <div>
